[package]
name = "coreutils-true"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
keywords = ["coreutils"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "true"
path = "src/main.rs"
